--- a/packages/site/src/components/Home/HomeExample.astro
+++ b/packages/site/src/components/Home/HomeExample.astro
@@ -1,4 +1,4 @@
-<script type="module" hoist>
+<script>
   import { prepareForm } from '@felte/element';
   import reporter from '@felte/reporter-tippy';
   import { validator } from '@felte/validator-yup';
