--- a/packages/site/src/pages/docs/[framework]/search.astro
+++ b/packages/site/src/pages/docs/[framework]/search.astro
@@ -1,10 +1,12 @@
 ---
 import BaseLayout from 'layouts:BaseLayout.astro';
 import DocsLayout from 'layouts:DocsLayout.astro';
-import sections from '../../../other/sections.json';
+import sections from 'other:sections.json';
 import fs from 'node:fs/promises';
 import path from 'node:path';
 import fm from 'front-matter';
+
+/** @typedef {import('front-matter').FrontMatterResult<any>} FMResult */
 
 export async function getStaticPaths() {
 
@@ -23,6 +25,7 @@ export async function getStaticPaths() {
     async function readMd(fileName) {
       const filePath = getFilePath(fileName);
       const file = await fs.readFile(filePath, { encoding: 'utf8' });
+      /** @type {FMResult} */
       const data = fm(file);
       const id = idfy(data.attributes.section);
       data.attributes.id = id;
@@ -58,14 +61,14 @@ export async function getStaticPaths() {
   return params;
 };
 
-const { framework } = Astro.request.params;
+const { framework } = Astro.params;
 const { all } = Astro.props;
 ---
 
 <BaseLayout title="Felte | Search">
   <DocsLayout section="search" all={all} framework={framework}>
     <search-page items={JSON.stringify(all)} framework={framework}><div /></search-page>
-    <script type="module" hoist>
+    <script>
       import 'components:Search/search-page.ts';
     </script>
   </DocsLayout>
