--- a/packages/site/src/pages/index.astro
+++ b/packages/site/src/pages/index.astro
@@ -4,11 +4,11 @@ import HomeExample from 'components:Home/HomeExample.astro';
 import Features from 'components:Home/Features.astro';
 import Example from 'components:Home/Example.svelte';
 import Articles from 'components:Home/Articles.svelte';
-import articles from '../other/articles.json';
+import articles from 'other:articles.json';
 ---
 
 <BaseLayout title="Felte | Home" section="home">
-  <main tabindex="-1" id="main-content">
+  <main tabindex={-1} id="main-content">
     <div class="row">
       <section class="title" aria-labelledby="felte-title">
         <h1 id="felte-title">FELTE</h1>
