--- a/packages/site/src/pages/docs/[framework]/search.astro
+++ b/packages/site/src/pages/docs/[framework]/search.astro
@@ -6,8 +6,6 @@ import fs from 'node:fs/promises';
 import path from 'node:path';
 import fm from 'front-matter';
 
-/** @typedef {import('front-matter').FrontMatterResult<any>} FMResult */
-
 export async function getStaticPaths() {
 
   function idfy(value) {
@@ -25,8 +23,7 @@ export async function getStaticPaths() {
     async function readMd(fileName) {
       const filePath = getFilePath(fileName);
       const file = await fs.readFile(filePath, { encoding: 'utf8' });
-      /** @type {FMResult} */
-      const data = fm(file);
+      const data = fm<any>(file);
       const id = idfy(data.attributes.section);
       data.attributes.id = id;
       data.attributes.subsections = data.attributes.subsections?.map(
