fix(site): fix home example

--- a/packages/site/src/components/Home/HomeExample.astro
+++ b/packages/site/src/components/Home/HomeExample.astro
@@ -1,4 +1,5 @@
 <script>
+  import '@felte/element/felte-form'
   import { prepareForm } from '@felte/element';
   import reporter from '@felte/reporter-tippy';
   import { validator } from '@felte/validator-yup';
