chore: add link tag

--- a/packages/site/src/layouts/BaseLayout.astro
+++ b/packages/site/src/layouts/BaseLayout.astro
@@ -18,6 +18,7 @@ const altLink = String(import.meta.env.PUBLIC_FELTE_ALT_LINK);
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
+    <link rel="me" href="https://sivar.cafe/@pablo" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ff3e00" />
 
