--- a/packages/site/src/pages/docs/[framework]/[section].astro
+++ b/packages/site/src/pages/docs/[framework]/[section].astro
@@ -62,7 +62,7 @@ export async function getStaticPaths() {
       }
     }));
   }));
-  return params;
+  return params.flat();
 };
 
 const { section, framework } = Astro.params;
