--- a/packages/site/src/pages/docs/index.astro
+++ b/packages/site/src/pages/docs/index.astro
@@ -1,5 +1,5 @@
 ---
-import Markdown from '@astrojs/markdown-component';
+import { Markdown } from 'astro-remote';
 import BaseLayout from 'layouts:BaseLayout.astro';
 ---
 
